update server configs to run correctly. modernize java syntax